# MindCare-AI-Assistant

./: .gitignore  README.md  frontend.py  pyproject.toml
backend/: agent.py  main.py  tools.py
